# vanityed25519

./: Cargo.toml
src/: main.rs
