[package]
name = "vanityed25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ssh-key = { version = "0.6", default-features = false, features = ["alloc", "ed25519"] }

[profile.release]
codegen-units = 1
debug = "none"
lto = true
opt-level = 3
panic = "abort"
strip = true
